--- a/static/styles/rewards/light-mode.css
+++ b/static/styles/rewards/light-mode.css
@@ -76,6 +76,10 @@
     /* box-shadow: inset 0 0 96px #00000010; */
   }
 
+  table tbody{
+    box-shadow: inset 0 0 96px #00000008;
+  }
+
   table[data-claim-rendered] tr#additional-details-border {
     /* background-color: var(--light-mode-background-color-dark); */
   }
